[gd_scene load_steps=31 format=3 uid="uid://dj53b06sf4sxy"]

[ext_resource type="Texture2D" uid="uid://kwtn51cg7kbk" path="res://assets/sprites/player/knight_full.png" id="1_aqf5g"]
[ext_resource type="Script" path="res://Entities/players/player_house.gd" id="1_mytfb"]
[ext_resource type="PackedScene" uid="uid://bgh468rubynm0" path="res://UI/QuestsUI/QuestUI.tscn" id="3_mqr4x"]
[ext_resource type="PackedScene" uid="uid://ges3fmqdhvsf" path="res://UI/Dialog/Dialog.tscn" id="4_3yuht"]
[ext_resource type="PackedScene" uid="uid://6b07cvgy8iqh" path="res://UI/InventoryUI/Inventory_Panel.tscn" id="5_ybk3c"]
[ext_resource type="PackedScene" uid="uid://bgrsemp5dhpfs" path="res://UI/HUD/HUD.tscn" id="6_g2ogr"]
[ext_resource type="Texture2D" uid="uid://dufr618ouycjg" path="res://assets/sprites/ui/circle.png" id="7_d0a42"]
[ext_resource type="Texture2D" uid="uid://ce6ayhor22a6t" path="res://assets/sprites/ui/arrow.png" id="9_m1mgn"]
[ext_resource type="Texture2D" uid="uid://c0v32vj6qo6se" path="res://assets/sprites/ui/menu.png" id="10_6bg15"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f7k8h"]
atlas = ExtResource("1_aqf5g")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skjmx"]
atlas = ExtResource("1_aqf5g")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax81y"]
atlas = ExtResource("1_aqf5g")
region = Rect2(96, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31nrb"]
atlas = ExtResource("1_aqf5g")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owqtn"]
atlas = ExtResource("1_aqf5g")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoqbs"]
atlas = ExtResource("1_aqf5g")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm030"]
atlas = ExtResource("1_aqf5g")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vwe3"]
atlas = ExtResource("1_aqf5g")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncbok"]
atlas = ExtResource("1_aqf5g")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlw7i"]
atlas = ExtResource("1_aqf5g")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5w2k"]
atlas = ExtResource("1_aqf5g")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mntf7"]
atlas = ExtResource("1_aqf5g")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a730n"]
atlas = ExtResource("1_aqf5g")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cob4t"]
atlas = ExtResource("1_aqf5g")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti157"]
atlas = ExtResource("1_aqf5g")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr4dn"]
atlas = ExtResource("1_aqf5g")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ovl2s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7k8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skjmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax81y")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31nrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owqtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoqbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm030")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vwe3")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncbok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlw7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5w2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mntf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a730n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cob4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti157")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr4dn")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kh1h2"]
radius = 5.5
height = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_17b4n"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hvdkf"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qv5y5"]
radius = 40.0

[node name="PlayerHouse" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_mytfb")

[node name="AnimatedSpritePlayer" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ovl2s")
animation = &"run"
autoplay = "idle"
frame = 1
frame_progress = 0.353688

[node name="Area2D" type="Area2D" parent="."]

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -9.5)
shape = SubResource("CapsuleShape2D_kh1h2")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -9.5)
shape = SubResource("CapsuleShape2D_kh1h2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -7)
zoom = Vector2(4, 4)
limit_top = -240
limit_bottom = 160
limit_smoothed = true
position_smoothing_speed = 20.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MoveControls" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -232.0
offset_right = 10.0
offset_bottom = -232.0
grow_vertical = 0

[node name="Control2" type="Control" parent="CanvasLayer/MoveControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 100.0
offset_bottom = 100.0
grow_vertical = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/MoveControls/Control2"]
position = Vector2(47, 48)
shape = SubResource("CircleShape2D_17b4n")
action = "move_left"

[node name="Sprite2D7" type="Sprite2D" parent="CanvasLayer/MoveControls/Control2/TouchScreenButton"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_d0a42")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/MoveControls/Control2/TouchScreenButton"]
position = Vector2(1, 0)
rotation = 3.14159
scale = Vector2(2, 2)
texture = ExtResource("9_m1mgn")

[node name="Control3" type="Control" parent="CanvasLayer/MoveControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 108.0
offset_right = 208.0
offset_bottom = 100.0
grow_vertical = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/MoveControls/Control3"]
position = Vector2(47, 48)
shape = SubResource("CircleShape2D_17b4n")
action = "move_right"

[node name="Sprite2D8" type="Sprite2D" parent="CanvasLayer/MoveControls/Control3/TouchScreenButton"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_d0a42")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/MoveControls/Control3/TouchScreenButton"]
position = Vector2(0, 1)
scale = Vector2(2, 2)
texture = ExtResource("9_m1mgn")

[node name="Control4" type="Control" parent="CanvasLayer/MoveControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -60.0
offset_right = 155.0
offset_bottom = 40.0
grow_vertical = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/MoveControls/Control4"]
position = Vector2(47, 48)
shape = SubResource("CircleShape2D_17b4n")
action = "move_up"

[node name="Sprite2D5" type="Sprite2D" parent="CanvasLayer/MoveControls/Control4/TouchScreenButton"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_d0a42")

[node name="Sprite2D4" type="Sprite2D" parent="CanvasLayer/MoveControls/Control4/TouchScreenButton"]
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("9_m1mgn")

[node name="Control5" type="Control" parent="CanvasLayer/MoveControls"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = 60.0
offset_right = 154.0
offset_bottom = 160.0
grow_vertical = 0

[node name="TouchScreenButton2" type="TouchScreenButton" parent="CanvasLayer/MoveControls/Control5"]
position = Vector2(47, 46)
shape = SubResource("CircleShape2D_hvdkf")
action = "move_down"

[node name="Sprite2D6" type="Sprite2D" parent="CanvasLayer/MoveControls/Control5/TouchScreenButton2"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_d0a42")

[node name="Sprite2D5" type="Sprite2D" parent="CanvasLayer/MoveControls/Control5/TouchScreenButton2"]
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("9_m1mgn")

[node name="Control3" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_top = 71.0
offset_right = -1.0
offset_bottom = 171.0
grow_horizontal = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer/Control3"]
position = Vector2(50, 2.08165e-12)
shape = SubResource("CircleShape2D_qv5y5")
action = "open_menu"

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/Control3/TouchScreenButton"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_d0a42")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control3/TouchScreenButton"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_6bg15")

[node name="InventoryUI" type="CanvasLayer" parent="."]

[node name="InventoryPanel" parent="InventoryUI" instance=ExtResource("5_ybk3c")]

[node name="Hud" parent="." instance=ExtResource("6_g2ogr")]
layer = 2

[node name="QuestsUi" type="CanvasLayer" parent="."]

[node name="QuestUi" parent="QuestsUi" instance=ExtResource("3_mqr4x")]

[node name="XP" type="Label" parent="QuestsUi"]
visible = false
offset_left = 14.0
offset_top = 25.0
offset_right = 58.0
offset_bottom = 41.0
text = "XP:"

[node name="XPValue" type="Label" parent="QuestsUi"]
visible = false
offset_left = 61.0
offset_top = 25.0
offset_right = 105.0
offset_bottom = 41.0
text = "0"

[node name="Dialog" parent="QuestsUi" instance=ExtResource("4_3yuht")]
